Rework YangModuleInfo methods
Add module(), which directly returns QNameModule. Deprecate getName() in
favor of new name() method.

Change-Id: I76dd0ca8d89d88848d4c7ae2365169a143641fe8
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>